--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,4 +3,4 @@
 
 <router-outlet></router-outlet>
 
-<app-footer *ngIf="showHead"></app-footer>
+<!-- <app-footer *ngIf="showHead"></app-footer> -->
