--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -81,3 +81,20 @@ app-header{
 }
 
 
+.slide-in-top {
+  animation: slide-in-right 0.5s ease-out;
+}
+
+@keyframes slide-in-right {
+  0% {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+
+
