--- a/src/app/todo-dialog/todo-dialog.component.html
+++ b/src/app/todo-dialog/todo-dialog.component.html
@@ -26,7 +26,7 @@
         </mat-datepicker-actions>
       </mat-datepicker>
     </mat-form-field>
-    <div class="btn-check">
+    <div class="btn_check">
       <mat-checkbox color="primary" formControlName="completed"></mat-checkbox>
       <span
         [formGroup]="todoForm"
