--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -41,15 +41,14 @@
         <td mat-cell *matCellDef="let row">
           <mat-icon *ngIf="row.completed" style="color: green">done</mat-icon>
           <mat-icon *ngIf="!row.completed" color="warn">clear</mat-icon>
-          <!-- {{ row.completed }} -->
         </td>
       </ng-container>
 
       <!-- completed Column -->
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef>Action</th>
-        <td mat-cell *matCellDef="let row">
-          <div style="display: flex">
+        <td mat-cell *matCellDef="let row" class="action-buttons">
+          <div class="box_mat-button">
             <button mat-icon-button color="primary" class="mat-button" (click)="editTodo(row)">
               <mat-icon>edit</mat-icon>
             </button>
@@ -57,6 +56,7 @@
               <mat-icon>delete</mat-icon>
             </button>
           </div>
+
         </td>
       </ng-container>
 
