--- a/src/styles.css
+++ b/src/styles.css
@@ -7,8 +7,8 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
-@import url(https://unpkg.com/bootstrap@4.1.1/dist/css/bootstrap.min.css);
-
+/* @import url(https://unpkg.com/bootstrap@4.1.1/dist/css/bootstrap.min.css); */
+@import url(https://unpkg.com/bootstrap@5.2.3/dist/css/bootstrap.min.css);
 
 a:hover,
 a {
