--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -97,4 +97,25 @@ app-header{
 }
 
 
+.notification {
+  position: fixed;
+  top: 50px;
+  right: -500px;
+  width: 500px;
+  height: 100px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  animation: slide-in 0.5s forwards;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+}
+
+@keyframes slide-in {
+  100% {
+    right: 0;
+  }
+}
+
+
+
 
