--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,5 +1,15 @@
 <div class="center_content">
-  <div *ngIf="errorMessage" class="alert alert-danger slide-in-top">{{ errorMessage }}</div>
+  <div *ngIf="errorMessage" class="alert alert-danger slide-in-top">
+    {{ errorMessage }}
+  </div>
+
+  <div class="notification alert alert-success" *ngIf="successSignupMes">
+    <strong>Success!</strong>{{ successSignupMes }}
+  </div>
+  <div class="notification alert alert-danger" *ngIf="errorSignupMes">
+    <strong>Error!</strong>{{ errorSignupMes }}
+  </div>
+
   <mat-card class="example-card">
     <mat-card-header class="login_title">
       <mat-card-title>My Todos</mat-card-title>
@@ -7,59 +17,162 @@
 
     <mat-card-content>
       <mat-tab-group mat-stretch-tabs="false" mat-align-tabs="start">
-          <mat-tab label="Login">
-
+        <mat-tab label="Login">
+          <form (ngSubmit)="loginUser()" [formGroup]="loginForm">
             <mat-form-field class="example-full-width mt-3">
               <mat-label>Username or Email</mat-label>
-              <input matInput name="username" [(ngModel)] = "username" required/>
+              <input matInput name="username" formControlName="username" />
+              <mat-error *ngIf="login.username.hasError('required')">
+                Username is <strong>required</strong>
+              </mat-error>
             </mat-form-field>
 
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label>Password</mat-label>
-              <input matInput [type]="hide ? 'password' : 'text'" [(ngModel)] = "password" required>
-              <button class="btn_pass" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              <input
+                matInput
+                [type]="hide ? 'password' : 'text'"
+                formControlName="password"
+                name="password"
+              />
+              <mat-error *ngIf="login.username.hasError('required')">
+                Password is <strong>required</strong>
+              </mat-error>
+              <button
+                class="btn_pass"
+                mat-icon-button
+                matSuffix
+                (click)="hide = !hide"
+                [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide"
+              >
+                <mat-icon>{{
+                  hide ? "visibility_off" : "visibility"
+                }}</mat-icon>
               </button>
             </mat-form-field>
             <a href="" class="text-content">Forgot password?</a>
-            <button type="button" class="btn btn-outline-primary btn-login mt-3 mb-3" (click)="handeLogin()">LOGIN</button>
-          </mat-tab>
-
+            <button
+              type="submit"
+              class="btn btn-outline-primary btn-login mt-3 mb-3"
+            >
+              LOGIN
+            </button>
+          </form>
+        </mat-tab>
 
         <mat-tab label="Sign up">
-          <mat-form-field class="example-full-width mt-3">
-            <mat-label>Username</mat-label>
-            <input matInput />
-          </mat-form-field>
+          <form [formGroup]="formSignUp">
+            <mat-form-field class="example-full-width mt-3">
+              <mat-label>Username</mat-label>
+              <input matInput formControlName="username" />
+              <mat-error *ngIf="signUp.username.hasError('required')">
+                Username is <strong>required</strong>
+              </mat-error>
+              <mat-error *ngIf="signUp.username.hasError('pattern')">
+                Username consists of string and number from 3 to 16 characters
+              </mat-error>
+              <mat-error *ngIf="signUp.username.hasError('usernameExists')">
+                This username already in use
+              </mat-error>
+            </mat-form-field>
 
             <mat-form-field class="example-full-width">
               <mat-label>Email</mat-label>
-              <input type="email" matInput [formControl]="emailFormControl" placeholder="Ex. pat@example.com">
-              <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+              <input
+                type="email"
+                matInput
+                placeholder="Ex. pat@example.com"
+                formControlName="email"
+              />
+              <mat-error
+                *ngIf="
+                  signUp.email.hasError('email') &&
+                  !signUp.email.hasError('required')
+                "
+              >
                 Please enter a valid email address
               </mat-error>
-              <mat-error *ngIf="emailFormControl.hasError('required')">
+              <mat-error *ngIf="signUp.email.hasError('required')">
                 Email is <strong>required</strong>
+              </mat-error>
+              <mat-error *ngIf="signUp.email.hasError('emailExists')">
+                This email already in use
               </mat-error>
             </mat-form-field>
 
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label>Password</mat-label>
-              <input matInput [type]="hide ? 'password' : 'text'">
-              <button class="btn_pass" mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
-                <mat-icon class="icon-hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
+              <input
+                matInput
+                [type]="hide ? 'password' : 'text'"
+                formControlName="password"
+              />
+              <button
+                class="btn_pass"
+                mat-icon-button
+                matSuffix
+                (click)="hide = !hide"
+                [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hide"
+              >
+                <mat-icon class="icon-hide">{{
+                  hide ? "visibility_off" : "visibility"
+                }}</mat-icon>
               </button>
+              <mat-error *ngIf="signUp.password.hasError('required')">
+                Password is <strong>required</strong>
+              </mat-error>
+              <mat-error
+                multiLine
+                *ngIf="
+                  signUp.password.hasError('pattern') &&
+                  !signUp.password.hasError('required')
+                "
+              >
+                Password must be at least 8 and up to 40 characters, at least
+                one uppercase letter, one lowercase letter, one number and one
+                special character
+              </mat-error>
             </mat-form-field>
 
             <mat-form-field class="example-full-width" appearance="fill">
               <mat-label>Confirm Password</mat-label>
-              <input matInput [type]="hidec ? 'password' : 'text'">
-              <button class="btn_pass" mat-icon-button matSuffix (click)="hidec = !hidec" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hidec">
-                <mat-icon>{{hidec ? 'visibility_off' : 'visibility'}}</mat-icon>
+              <input
+                matInput
+                [type]="hidec ? 'password' : 'text'"
+                formControlName="confirmPassword"
+              />
+              <button
+                class="btn_pass"
+                mat-icon-button
+                matSuffix
+                (click)="hidec = !hidec"
+                [attr.aria-label]="'Hide password'"
+                [attr.aria-pressed]="hidec"
+              >
+                <mat-icon>{{
+                  hidec ? "visibility_off" : "visibility"
+                }}</mat-icon>
               </button>
+              <mat-error *ngIf="signUp.confirmPassword.hasError('required')">
+                Confirm is <strong>required</strong>
+              </mat-error>
+              <mat-error
+                *ngIf="signUp.confirmPassword.hasError('confirmedValidator')"
+              >
+                Password and Confirm Password must be match.
+              </mat-error>
             </mat-form-field>
-            <button type="button" class="btn btn-outline-primary btn-login mt-2 mb-5">SIGN UP</button>
-
+            <button
+              type="submit"
+              class="btn btn-outline-primary btn-login mt-2 mb-5"
+              [disabled]="this.formSignUp.invalid"
+              (click)="userSignUp()"
+            >
+              SIGN UP
+            </button>
+          </form>
         </mat-tab>
       </mat-tab-group>
     </mat-card-content>
