--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,5 +1,5 @@
 <div class="container list-todo">
-  <mat-form-field>
+  <mat-form-field appearance="fill">
     <mat-label>Filter</mat-label>
     <input
       matInput
