--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -101,7 +101,7 @@
               </mat-error>
             </mat-form-field>
 
-            <mat-form-field class="example-full-width" appearance="fill">
+            <mat-form-field class="example-full-width">
               <mat-label>Password</mat-label>
               <input
                 matInput
