--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,6 @@
 <app-header *ngIf="showHead"></app-header>
 
 <router-outlet></router-outlet>
+<lib-ng-toast></lib-ng-toast>
 
 <!-- <app-footer *ngIf="showHead"></app-footer> -->
