--- a/src/app/change-email-user/change-email-user.component.html
+++ b/src/app/change-email-user/change-email-user.component.html
@@ -1,44 +1,55 @@
-<h2 mat-dialog-title>Change email address</h2>
+<div class="container">
+  <h2 mat-dialog-title>Change email address</h2>
 
-<mat-stepper orientation="vertical" [linear]="isLinear" #stepper>
-  <mat-step [stepControl]="firstFormGroup">
-    <form [formGroup]="firstFormGroup">
-      <ng-template matStepLabel>Fill out your name</ng-template>
-      <mat-form-field appearance="outline" class="mt-1">
-        <mat-label>OTP Code</mat-label>
-        <input matInput placeholder="Last name, First name" formControlName="firstCtrl" required>
-      </mat-form-field>
+  <mat-stepper linear #stepper>
+    <mat-step [stepControl]="passwordFormGroup" [editable]="false">
+      <form [formGroup]="passwordFormGroup">
+        <ng-template matStepLabel>Enter your account password</ng-template>
+        <mat-form-field appearance="fill">
+          <mat-label>Password</mat-label>
+          <input matInput formControlName="password" type="password" />
+          <mat-error *ngIf="fbPasswordFormGroup.password.hasError('required')">Password is
+            <strong>required</strong></mat-error>
+          <mat-error *ngIf="fbPasswordFormGroup.password.hasError('passwordValid')">
+            Incorrect old password
+          </mat-error>
+        </mat-form-field>
+        <div>
+          <button mat-button matStepperNext>Next</button>
+        </div>
+      </form>
+    </mat-step>
+
+    <mat-step [stepControl]="emailFormGroup" [editable]="false">
+      <form [formGroup]="emailFormGroup">
+        <ng-template matStepLabel>Fill out your email</ng-template>
+        <mat-form-field appearance="fill">
+          <mat-label>Email</mat-label>
+          <input matInput formControlName="email" />
+          <mat-error *ngIf="fbEmailFormGroup.email.hasError('required')">Password is
+            <strong>required</strong></mat-error>
+          <mat-error *ngIf="fbEmailFormGroup.email.hasError('email')">Please enter a valid email address
+          </mat-error>
+
+          <mat-error *ngIf="fbEmailFormGroup.email.hasError('emailExists')">
+            This email already exists
+          </mat-error>
+        </mat-form-field>
+        <div>
+          <button mat-button mat-dialog-close>Close</button>
+          <button mat-button matStepperNext (click)="changeEmail()">
+            Next
+          </button>
+        </div>
+      </form>
+    </mat-step>
+    <mat-step>
+      <ng-template matStepLabel>Done</ng-template>
+      <p>{{ message }}</p>
       <div>
-        <button mat-button matStepperNext>Next</button>
+        <button mat-button mat-dialog-close>Close</button>
+        <button mat-button (click)="stepper.reset()">Reset</button>
       </div>
-    </form>
-  </mat-step>
-  <mat-step [stepControl]="secondFormGroup">
-    <form [formGroup]="secondFormGroup">
-      <ng-template matStepLabel>Fill out your email address</ng-template>
-      <mat-form-field appearance="outline" class="mt-1">
-        <mat-label>Address</mat-label>
-        <input matInput formControlName="secondCtrl" placeholder="Ex. pat@example.com"
-               required type="email">
-      </mat-form-field>
-      <div>
-        <button mat-button matStepperPrevious>Back</button>
-        <button mat-button matStepperNext>Next</button>
-      </div>
-    </form>
-  </mat-step>
-  <mat-step>
-    <ng-template matStepLabel>Done</ng-template>
-    <p>You are now done.</p>
-    <div>
-      <button mat-button matStepperPrevious>Back</button>
-      <button mat-button (click)="stepper.reset()">Reset</button>
-    </div>
-  </mat-step>
-</mat-stepper>
-
-
-
-
-
-
+    </mat-step>
+  </mat-stepper>
+</div>
