--- a/src/app/change-password/change-password.component.html
+++ b/src/app/change-password/change-password.component.html
@@ -19,13 +19,10 @@
         <mat-error *ngIf="fbChangePass.newPassword.hasError('required')">
           New password is <strong>required</strong>
         </mat-error>
-        <mat-error
-          multiLine
-          *ngIf="
+        <mat-error multiLine *ngIf="
             fbChangePass.newPassword.hasError('pattern') &&
             !fbChangePass.newPassword.hasError('required')
-          "
-        >
+          ">
           Password must be at least 8 and up to 40 characters, at least one
           uppercase letter, one lowercase letter, one number and one special
           character
@@ -37,19 +34,12 @@
         <mat-error *ngIf="fbChangePass.confirmPassword.hasError('required')">
           Repeat new password is <strong>required</strong>
         </mat-error>
-        <mat-error
-          *ngIf="fbChangePass.confirmPassword.hasError('confirmedValidator')"
-        >
+        <mat-error *ngIf="fbChangePass.confirmPassword.hasError('confirmedValidator')">
           New Password and Confirm Password must be match.
         </mat-error>
       </mat-form-field>
-      <button
-        type="submit"
-        mat-raised-button
-        color="primary"
-        (click)="changePass()"
-        [disabled]="this.fChangePass.invalid"
-      >
+      <button type="submit" mat-raised-button color="primary" (click)="changePass()"
+        [disabled]="this.fChangePass.invalid">
         Submit
       </button>
     </form>
