--- a/src/app/page-not-found-component/page-not-found-component.component.html
+++ b/src/app/page-not-found-component/page-not-found-component.component.html
@@ -4,7 +4,7 @@
 
       <div class="row">
         <div class="col-sm-12 col-md-12 mt-5 mb-5">
-          <button mat-fab extended color="accent" class="btn_go-back" routerLink="/login">
+          <button mat-fab extended color="accent" class="btn_go-back" routerLink="">
             <mat-icon>favorite</mat-icon>
             Go back
           </button>
