--- a/src/app/change-email-user/change-email-user.component.html
+++ b/src/app/change-email-user/change-email-user.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
   <h2 mat-dialog-title>Change email address</h2>
 
   <mat-stepper linear #stepper>
@@ -26,7 +26,7 @@
         <mat-form-field appearance="fill">
           <mat-label>Email</mat-label>
           <input matInput formControlName="email" />
-          <mat-error *ngIf="fbEmailFormGroup.email.hasError('required')">Password is
+          <mat-error *ngIf="fbEmailFormGroup.email.hasError('required')">Email is
             <strong>required</strong></mat-error>
           <mat-error *ngIf="fbEmailFormGroup.email.hasError('email')">Please enter a valid email address
           </mat-error>
