--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <mat-toolbar color="primary">
-  <button mat-icon-button [matMenuTriggerFor]="menu">
+  <button mat-icon-button [matMenuTriggerFor]="menu" *ngIf="isLogged()">
     <mat-icon>menu</mat-icon>
   </button>
   <span routerLink="/todos" style="cursor: pointer">My Todo</span>
@@ -8,6 +8,10 @@
     <button mat-menu-item [matMenuTriggerFor]="submenu">
       <mat-icon>account_circle</mat-icon>
       <span>{{ getUsername() }}</span>
+    </button>
+    <button *ngIf="getRoleAdmin()" mat-menu-item [matMenuTriggerFor]="adminMenu">
+      <mat-icon>manage_accounts</mat-icon>
+      <span>Admin</span>
     </button>
     <button mat-menu-item (click)="authService.onLogout()" routerLink="/login">
       <mat-icon>exit_to_app</mat-icon>
@@ -19,9 +23,20 @@
     <button mat-menu-item routerLink="/user/profile-account">
       User information
     </button>
-    <button mat-menu-item (click)="openDialog()">Change your e-mail</button>
+    <button mat-menu-item routerLink="/user/change-email">
+      Change your e-mail
+    </button>
     <button mat-menu-item routerLink="/user/change-password">
       Change the password
     </button>
   </mat-menu>
+
+  <mat-menu #adminMenu="matMenu">
+    <button mat-menu-item routerLink="/admin/manager-user">
+      User management
+    </button>
+  </mat-menu>
+  <span class="example-spacer"></span>
+  <mat-icon *ngIf="!isLogged()">login</mat-icon>
+  <span routerLink="login" *ngIf="!isLogged()" style="cursor: pointer; padding:10px;" >Login</span>
 </mat-toolbar>
