--- a/src/app/todo/todo.component.html
+++ b/src/app/todo/todo.component.html
@@ -1,4 +1,4 @@
-<div class="container list-todo">
+<div class="container list-todo" style="padding-bottom: 50px;">
   <p class="text_header">Your to-do list</p>
   <mat-form-field appearance="fill">
     <mat-label>Filter</mat-label>
