--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,9 @@
 <app-spinner></app-spinner>
 <app-header *ngIf="showHead"></app-header>
-<router-outlet></router-outlet>
+<div class="content" [ngStyle]="{'padding-bottom': showFooter ? '100px' : '0'}">
+  <router-outlet></router-outlet>
+</div>
+<app-footer *ngIf="showFooter"></app-footer>
 <lib-ng-toast></lib-ng-toast>
 
-<!-- <app-footer *ngIf="showHead"></app-footer> -->
+
