--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,37 @@
 <!-- Footer -->
-<footer class="footer">
-
-
-    <div class="box-footer">
-      <span class="text-muted">All Rights Reserved 2023 @in28minutes</span>
+<footer class="text-center">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block">
+      <span>Get connected with us on social networks:</span>
     </div>
+    <!-- Left -->
 
+    <!-- Right -->
+    <div>
+      <a href="https://www.facebook.com/dai.vudangdai" class="me-4 text-reset">
+        <i class="fa-brands fa-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/_daivu.291/" class="me-4 text-reset">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="https://www.linkedin.com/in/dangdaiptit/" class="me-4 text-reset">
+        <i class="fab fa-linkedin"></i>
+      </a>
+      <a href="https://github.com/dangdaiptit" class="me-4 text-reset">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Copyright -->
+  <div class="text-center p-2" style="background-color: rgba(0, 0, 0, 0.05);">
+    © 2023 Copyright:
+    <a class="text-reset" href="https://mail.google.com/">dangdai.ptit@gmail.com</a>
+  </div>
+  <!-- Copyright -->
 </footer>
-  <!-- Footer -->
-
-
+<!-- Footer -->
