--- a/src/app/manager-user/manager-user.component.html
+++ b/src/app/manager-user/manager-user.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-3">
+<div class="container mt-3" style="padding-bottom: 50px;">
   <p class="text_header">User manager</p>
   <mat-form-field appearance="fill">
     <mat-label>Filter</mat-label>
